style.css
/* ... */
.hover-point:nth-child(2):hover ~ .box-contents {
    box-shadow: 0 15px 50px rgba(0, 0, 0, .3);
    transform-origin: center top;
    transform: perspective(1000px) rotateX(10deg);
  }

#settings_WildcardsCards .prose.gradio-html {
    position: absolute;
    bottom: 0;
}

#settings_WildcardsCards .secondary.gradio-button {
    max-width: none;
    }

#txt2img_wildcards_cards_html .card .button-row, #img2img_wildcards_cards_html .card .button-row {
    top: 0;
  }

#txt2img_wildcards_cards {
    padding: 2em;
}

#txt2img_wildcards_cards_html .card {
    background-image: linear-gradient(90deg, var(--button-secondary-background-fill), var(--button-primary-background-fill));
    font-size: 100%;
    height: 18em;
    width: 14em;
    margin: 0.5em;
    border-radius: 0.8rem;
}

    #txt2img_wildcards_cards_html .card .actions .additional{
        display: none
    }

    #txt2img_wildcards_cards_html .card .actions {
        position: absolute;
        width: 100%;
    }

        #txt2img_wildcards_cards_html .card .actions .name {
            display: inline-flex;
            position: relative;
            align-items: center;
            width: 100%;
            height: 100%;
            left: 16%;
            font-size: 1em;
            overflow: hidden;
            white-space: nowrap;
        }


#img2img_wildcards_cards_html .card:has(:not(img)), #txt2img_wildcards_cards_html .card:has(:not(img)){
    background-image: url('./resources/card-no-preview.jpg');
    background-size: contain;
}

#img2img_wildcards_cards_html .card:has(img):hover, #txt2img_wildcards_cards_html .card:hover{
    background-image: url('./resources/card-sel.gif');
    background-size: contain;
}

#txt2img_wildcards_cards_html .card:hover> .preview, #img2img_wildcards_cards_html .card:hover> .preview{
    mix-blend-mode: screen;
  }

#img2img_wildcards_cards {
    padding: 2em;
}

#img2img_wildcards_cards_html .card {
    background-image: linear-gradient(90deg, var(--button-secondary-background-fill), var(--button-primary-background-fill));
    font-size: 100%;
    height: 18em;
    width: 14em;
    margin: 0.5em;
}

#img2img_wildcards_cards_html .card .actions .additional{
    display: none
}

#img2img_wildcards_cards_html .card .actions {
    position: absolute;
    width: 100%;
}

#txt2img_wildcards_cards_html .card .actions .name {
    height: initial !important;
    margin-top: 1em
}

#img2img_wildcards_cards_html .card .actions .name {
    height: initial !important;
    margin-top: 1em
}

#img2img_wildcards_cards_html .card .actions .name {
    display: inline-flex;
    position: relative;
    align-items: center;
    width: 100%;
    height: 100%;
    left: 16%;
    font-size: 1em;
    overflow: hidden;
    white-space: nowrap;
}


#wcc_fil_input_div .form{
  padding-bottom: 0.6em;
}

#wcc_fil_gal_div{
  flex-grow: 5!important;
  margin-top: 0.5em;
}

#tab_wildcards_filter_tab {
  border-right: solid 1px #3741513d;
  padding-right: 0.8em;
}

#tab_wildcards_filter_tab .gap {
  gap: 0.2em;
}

.wcc_fil_aux_opt{
  max-width: fit-content;
}

#wcc_sel_view .gap{
  gap: var(--layout-gap) !important;
}
/*___________________________________________*/
#wcc_fil_cards_gal{
    height: 83vh;
    padding-left: 1em;
    padding-bottom: 10px;
    overflow-y: scroll !important;
    scrollbar-width: thin;
    border-radius: 0;
  
}

.wcc_div_sep{
  margin-bottom: 2em;
}

#wcc_filter_acts {
  flex-grow: 1;
  flex-direction: row-reverse;
}

#wcc_fil_opt_div {
  gap: 0.2em;
}

#wcc_filter_acts button {
  min-width: fit-content;
  padding: 0.3em;
  max-width: 4em;
}

.wcc_status_btn:hover {
  background: var(--checkbox-background-color-selected) !important;
  border-color: var(--checkbox-background-color-selected);
}

#wcc_fil_accord{
  /*position: sticky;*/
  top: -0.5em;
  z-index: 50;
  background: var(--background-fill-primary);
  /*padding-bottom: 0;*/
}
 
.wcc_neg_input .container .wrap,.wcc_neg_input .container textarea{
    background: #7b2e2e69 !important;
    border-color: #792b2b80 !important;
}

#wcc_filer_run_btn {
  max-width: fit-content;
  min-height: 3.1em;
  align-self: center;
  margin-top: 0.7em;
}

.info_log_block{
  font-size: medium;
  color: var(--block-info-text-color);
}

.wcc_stack_tag {
  background: var(--button-secondary-border-color);
  position: absolute;
  width: 6em;
  translate: -5% 40%;
  box-shadow: 2px 3px 2px #00000054;
  border-bottom: 1px solid var(--block-info-text-color);
  border-top: 1px solid var(--block-info-text-color);
  border-radius: 0px 10px 10px 0px;
  align-content: center;
  font-weight: bold;
  padding-top: 0.6em;
  padding-bottom: 0.6em;
  font-size: small;
  text-align: start;
  padding-left: 0.5em;
}

.gallery-item:has(.wcc_gal_item){
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
    transition: transform 0.3s ease, box-shadow 0.3s ease, margin 0.3s ease;
    margin: 0.3em 0.2em 2em 0.2em;
    height: 20em;
    width: 14em;
}

.gallery-item .gallery:has(.wcc_gal_item){
    padding: 0;
    height: inherit;
}

.gallery-item:has(.wcc_item_selected):hover {
  box-shadow: -2px 2px 8px #ff4545a1, 1px 6px 18px #ff3c00a1;
}

.gallery-item:has(.wcc_gal_item.wcc_item_stack){
  box-shadow: 5px 5px #8a8b95,10px 10px #8a8b958a ,15px 15px #8a8b9569;
}

.gallery-item:has(.wcc_item_selected){
    border-color: var(--button-primary-border-color) !important;
    border-width: 2px !important;
    margin-left: 0.7em;
    margin-left: 0.7em;
    margin-right: 0.7em;
    box-shadow: 1px 6px 12px #ff3c00a1;
}
.wcc_gal_label{
    background: #00000052;
    font-size: clamp(12px, 1.2vw, 25px);
    padding-bottom: 0.25em;
    padding-left: 0.5em;
    padding-right: 0.5em;
}

.wcc_gal_item{
    display: flex;
    flex-direction: column;
    height: 100%;
    background-size: cover !important  ;
    justify-content: space-between;
}
/* ... */

